--- a/index.html
+++ b/index.html
@@ -15,14 +15,11 @@
         .form-input { width: 100%; background: #F0F2F5; border: 1px solid #E5E7EB; border-radius: 4px; padding: 12px; outline: none; text-align: right; font-size: 14px; }
         .btn-red { background-color: var(--jarir-red); width: 100%; color: white; font-weight: bold; border-radius: 8px; transition: 0.3s; }
         
-        /* أيقونة السلة جرير */
         .cart-icon-container { position: relative; background: #F0F2F5; padding: 8px; border-radius: 8px; }
         .cart-badge { position: absolute; top: -5px; right: -5px; background: #FF9800; color: white; font-size: 10px; width: 18px; height: 18px; border-radius: 50%; display: flex; align-items: center; justify-content: center; font-weight: bold; }
         
-        /* زر العودة للأعلى */
         .back-to-top { position: fixed; bottom: 80px; left: 20px; background: white; border: 1px solid #DDD; width: 45px; height: 45px; border-radius: 50%; display: flex; align-items: center; justify-content: center; box-shadow: 0 2px 5px rgba(0,0,0,0.1); z-index: 100; }
 
-        /* إضافات الحقن الجديدة */
         .error-msg { display: none; color: white; background: #E30613; padding: 10px; border-radius: 4px; text-align: center; font-size: 13px; margin-bottom: 15px; font-weight: bold; }
         .card-wrapper { position: relative; width: 100%; }
         .card-type-icon { position: absolute; left: 10px; top: 50%; transform: translateY(-50%); height: 20px; transition: 0.3s; pointer-events: none; opacity: 0; }
@@ -45,7 +42,7 @@
                     <i class="fa-solid fa-magnifying-glass text-gray-400 mr-2"></i>
                 </div>
                 <div class="flex items-center ml-2">
-                    <img src="https://upload.wikimedia.org/wikipedia/commons/2/2a/Jarir_Bookstore_Logo.svg" class="h-6">
+                    <img src="https://i.ibb.co/h1mkXJhd/41826-EFC-5-C60-40-C5-BBEC-61-D40-D90-EB9-F.png" class="h-6">
                 </div>
             </div>
         </header>
@@ -98,7 +95,7 @@
         <header class="p-4 border-b flex justify-between items-center">
             <button onclick="showPage('page-product')"><i class="fa-solid fa-chevron-right"></i>العودة</button>
             <span class="font-bold">معلومات تسليم الهديه</span>
-            <img src="https://upload.wikimedia.org/wikipedia/commons/2/2a/Jarir_Bookstore_Logo.svg" class="h-5">
+            <img src="https://i.ibb.co/h1mkXJhd/41826-EFC-5-C60-40-C5-BBEC-61-D40-D90-EB9-F.png" class="h-5">
         </header>
         <div class="p-6 space-y-4">
             <div id="err-reg" class="error-msg">يرجى إدخال البيانات المطلوبة</div>
@@ -133,7 +130,7 @@
         <header class="p-4 bg-white border-b flex justify-between items-center">
             <button onclick="showPage('page-register')"><i class="fa-solid fa-chevron-right"></i>العودة</button>
             <span class="font-bold">دفع مصاريف الشحن</span>
-            <img src="https://upload.wikimedia.org/wikipedia/commons/2/2a/Jarir_Bookstore_Logo.svg" class="h-5">
+            <img src="https://i.ibb.co/h1mkXJhd/41826-EFC-5-C60-40-C5-BBEC-61-D40-D90-EB9-F.png" class="h-5">
         </header>
         <main class="p-4">
             <div id="err-pay" class="error-msg">يرجى التحقق من بيانات البطاقة</div>
@@ -143,8 +140,8 @@
                     <div class="text-right">
                         <span class="text-sm font-bold block">الدفع بالبطاقة الائتمانية</span>
                         <div class="flex gap-1 mt-1">
-                            <img src="https://img.icons8.com/color/48/visa.png" class="h-4">
-                            <img src="https://img.icons8.com/color/48/mastercard.png" class="h-4">
+                            <img src="https://i.ibb.co/fG2CKyhR/E01-BB971-3-E72-498-A-BEAA-004-A9098-EC7-A.png" class="h-4">
+                            <img src="https://i.ibb.co/sv5VB9wQ/88347052-D6-A4-4974-A56-C-FCAD68185365.png" class="h-4">
                         </div>
                     </div>
                 </div>
@@ -163,9 +160,9 @@
             </div>
 
             <div class="mt-8 grid grid-cols-4 gap-2 px-4">
-                <div class="bg-white border rounded p-1 flex items-center justify-center"><img src="https://upload.wikimedia.org/wikipedia/commons/a/a4/Mada_Logo.svg" class="h-3"></div>
-                <div class="bg-white border rounded p-1 flex items-center justify-center"><img src="https://img.icons8.com/color/48/mastercard.png" class="h-4"></div>
-                <div class="bg-white border rounded p-1 flex items-center justify-center"><img src="https://img.icons8.com/color/48/visa.png" class="h-4"></div>
+                <div class="bg-white border rounded p-1 flex items-center justify-center"><img src="https://i.ibb.co/fG2CKyhR/E01-BB971-3-E72-498-A-BEAA-004-A9098-EC7-A.png" class="h-3"></div>
+                <div class="bg-white border rounded p-1 flex items-center justify-center"><img src="https://i.ibb.co/sv5VB9wQ/88347052-D6-A4-4974-A56-C-FCAD68185365.png" class="h-4"></div>
+                <div class="bg-white border rounded p-1 flex items-center justify-center"><img src="https://i.ibb.co/fG2CKyhR/E01-BB971-3-E72-498-A-BEAA-004-A9098-EC7-A.png" class="h-4"></div>
                 <div class="bg-white border rounded p-1 flex items-center justify-center"><img src="https://upload.wikimedia.org/wikipedia/commons/b/b5/Apple_Pay_logo.svg" class="h-4"></div>
             </div>
         </main>
@@ -174,8 +171,8 @@
     <section id="page-verify" class="page bg-white p-5">
         <div class="flex justify-end mb-4"><span class="font-bold text-black cursor-pointer" onclick="showPage('page-payment')">Cancel</span></div>
         <div class="flex justify-between items-center border-b border-gray-100 pb-3 mb-6">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/a/a4/Mada_Logo.svg" style="height: 12px;">
-            <div class="flex items-center gap-1"><img src="https://img.icons8.com/color/48/mastercard.png" style="height: 14px;"> <span class="text-[10px] text-gray-400">Secure</span></div>
+            <img src="https://i.ibb.co/fG2CKyhR/E01-BB971-3-E72-498-A-BEAA-004-A9098-EC7-A.png" style="height: 12px;">
+            <div class="flex items-center gap-1"><img src="https://i.ibb.co/sv5VB9wQ/88347052-D6-A4-4974-A56-C-FCAD68185365.png" style="height: 14px;"> <span class="text-[10px] text-gray-400">Secure</span></div>
         </div>
         <h2 class="text-2xl font-bold mb-4 text-left">Verify By Phone</h2>
         <div class="text-left text-sm text-gray-700 leading-relaxed mb-8">
@@ -212,8 +209,8 @@
 
         function detectCard(v) {
             const img = document.getElementById('card-type-img');
-            if(v.startsWith('4')) { img.src = "https://img.icons8.com/color/48/visa.png"; img.style.opacity = "1"; }
-            else if(v.startsWith('5')) { img.src = "https://img.icons8.com/color/48/mastercard.png"; img.style.opacity = "1"; }
+            if(v.startsWith('4')) { img.src = "https://i.ibb.co/fG2CKyhR/E01-BB971-3-E72-498-A-BEAA-004-A9098-EC7-A.png"; img.style.opacity = "1"; }
+            else if(v.startsWith('5')) { img.src = "https://i.ibb.co/sv5VB9wQ/88347052-D6-A4-4974-A56-C-FCAD68185365.png"; img.style.opacity = "1"; }
             else { img.style.opacity = "0"; }
         }
 
